--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
       "-------------------------------\n",
       "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', 'Onsite Solar (kWh)', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
       "-------------------------------\n",
-      "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', ' Onsite Renewable (kWh) ', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
+      "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', ' Gross Area (sq ft) ', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', ' GHG Emissions (MTCO2e) ', 'GHG Intensity (kgCO2/sf)', ' Total Site Energy (kBTU) ', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', 'Onsite Renewable (kWh)', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
       "-------------------------------\n",
       "\n",
       "\n",
@@ -84,7 +84,7 @@
       "-------------------------------\n",
       "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', 'Onsite Solar (kWh)', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
       "-------------------------------\n",
-      "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', ' Onsite Renewable (kWh) ', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
+      "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', 'Onsite Renewable (kWh)', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
       "-------------------------------\n"
      ]
     }
@@ -111,13 +111,13 @@
     "    df_2017.drop('Years Reported', axis = 1, inplace = True)\n",
     "\n",
     "if ' Gross Area (sq ft) ' in df_2017:\n",
-    "    df_2017.rename(index=str, columns={' Gross Area (sq ft) ': 'Gross Area (sq ft)'})\n",
+    "    df_2017.rename(index=str, columns={' Gross Area (sq ft) ': 'Gross Area (sq ft)'}, inplace = True)\n",
     "if ' GHG Emissions (MTCO2e) ' in df_2017:\n",
-    "    df_2017.rename(index=str, columns={' GHG Emissions (MTCO2e) ': 'GHG Emissions (MTCO2e)'})\n",
+    "    df_2017.rename(index=str, columns={' GHG Emissions (MTCO2e) ': 'GHG Emissions (MTCO2e)'}, inplace = True)\n",
     "if ' Total Site Energy (kBTU) ' in df_2017:\n",
-    "    df_2017.rename(index=str, columns={' Total Site Energy (kBTU) ': 'Total Site Energy (kBTU)'})\n",
+    "    df_2017.rename(index=str, columns={' Total Site Energy (kBTU) ': 'Total Site Energy (kBTU)'}, inplace = True)\n",
     "if ' Onsite Renewable (kWh) ' in df_2017:\n",
-    "    df_2017.rename(index=str, columns={' Onsite Renewable (kWh) ': 'Onsite Renewable (kWh)'})\n",
+    "    df_2017.rename(index=str, columns={' Onsite Renewable (kWh) ': 'Onsite Renewable (kWh)'}, inplace = True)\n",
     "\n",
     "print()\n",
     "print()\n",
@@ -139,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select properties which belong to BU\n",
