Add normalized distribution for E and G

--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Chengyu Deng, Xiaotong Niu, Qian Zhang\n",
     "\n",
-    "This Jupyter Notebook is the code for the CS506 Initial Report. Basically what we did is processing the main data set and ready to use for analysis. \n"
+    "This Jupyter Notebook is the code for the CS506 Initial Report. We processed the main data set and make it ready to use for analysis. \n"
    ]
   },
   {
@@ -18,23 +18,27 @@
     "**Part 1 Data processing**\n",
     "\n",
     "We used Building Energy Reporting And Disclosure Ordinance (BERDO) data provided by [Analyze Boston - Boston.gov](https://data.boston.gov/) to do the analysis. \n",
-    "* **_berdo2017.csv_** for the year of 2017\n",
-    "* **_2016-reported-energy-and-water-metrics.xlsx_** for the year of 2016\n",
-    "* **_2015-reported-energy-and-water-metrics.xlsx_** for the year of 2015\n",
+    "* **_berdo2017.csv_** for the year of 2017.\n",
+    "* **_2016-reported-energy-and-water-metrics.xlsx_** for the year of 2016.\n",
+    "* **_2015-reported-energy-and-water-metrics.xlsx_** for the year of 2015.\n",
     "\n",
     "The source of the data is: https://data.boston.gov/dataset/building-energy-reporting-and-disclosure-ordinance\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import data and put them into Pandas dataframes\n",
     "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.preprocessing import normalize\n",
+    "\n",
     "\n",
     "# 2015 xlsx -> csv\n",
     "data_2015_xlsx = pd.read_excel('2015-reported-energy-and-water-metrics.xlsx', index_col=None)\n",
@@ -70,21 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62\n",
-      "------------------------------------\n",
-      "['785 Commonwealth Avenue (1 University Road)', '233 Bay State Road', \"6-8 St. Mary's Street\", '722-728 Commonwealth Avenue', '40-48 Buswell Street', '514-522 Park Drive', '110-112 Cummington Street', '700 Commonwealth Avenue', '64-86 Cummington Street', '22-24 Buswell Street', '10-18 Buswell Street', '213-217 Bay State Road', '631-639 Commonwealth Avenue', '605-615 Commonwealth Avenue (2 Silber Way)', '111 Cummington Street (664-666 Comm. Ave)', '30-38 Cummington Street', '20-28 Cummington Street (24 Cummington St)', '2 Cummington Street (23-25 Blandford Street)', '622-640 Commonwealth Avenue', '610 Commonwealth Avenue', '582-596 Commonwealth Avenue (590 Comm / 712 Bea)', '580 Commonwealth Avenue', 'Hotel Commonwealth', '631-639 Commonwealth Avenue', '605-615 Commonwealth Avenue (2 Silber Way)', '140 Bay State Road', '577-599 Commonwealth Avenue (595 Comm Ave)', '565-575 Commonwealth Avenue', '100 Bay State Road', '91 Bay State Road', '660 Beacon Street', '642-648 Beacon Street', '610 Beacon Street (30 Bay State Road)', '512 Beacon Street', '664 Malvern Street', '100 Ashford Street', '120 Ashford Street', '300 Babcock Street', '285 Babcock, Case Center', '983-985 Commonwealth Avenue', '925 Commonwealth Avenue', '33 Harry Agganis Way', '915 Commonwealth Avenue', '10 Buick Street', '25 Buick Street', '881 Commonwealth Avenue', '871 Commonwealth Avenue', '855 Commonwealth Avenue', '560 Harrison Ave', '580 Harrison Ave', '610 Albany Street', '620 Albany Street', '650 Albany Street', 'Biosquare - Phase I', '700 Albany Street', '710 Albany Street', '801 Massachusetts Avenue (EPL)', '100 East Newton Street (635 Albany) G Building', '82 East Concord Street (715 Albany Street)', '75-85 East Newton Street (Evans) E Building', '778-780 Harrison Avenue R (10 Stoughton)', '790 Harrison Ave (71 East Concord) K Building']\n",
-      "------------------------------------\n",
-      "------------------------------------\n",
+      "BU properties ------------------------------------\n",
       "(55, 23)\n",
       "(56, 23)\n",
-      "(59, 23)\n"
+      "(59, 23)\n",
+      "BU properties Site EUI (kBTU/sf)] != Not Available----\n",
+      "(37, 23)\n",
+      "(54, 23)\n",
+      "(57, 23)\n",
+      "------------------------------------\n",
+      "['Unnamed: 0', 'Property Name', 'Reported', 'Property Type', 'Address', 'ZIP', 'Gross Area (sq ft)', 'Site EUI (kBTU/sf)', 'Energy Star Score', 'Energy Star Certified', 'Property Uses', 'Year Built', 'GHG Emissions (MTCO2e)', 'GHG Intensity (kgCO2/sf)', 'Total Site Energy (kBTU)', '% Electricity', '% Gas', '% Steam', 'Water Intensity (gal/sf)', 'Onsite Solar (kWh)', 'User Submitted Info', 'User Submitted Link', 'Tax Parcel']\n",
+      "------------------------------------\n"
      ]
     }
    ],
@@ -138,6 +145,18 @@
     "df2016_BU = df_2016.loc[df_2016['Property Name'].isin(propertyList)]\n",
     "df2017_BU = df_2017.loc[df_2017['Property Name'].isin(propertyList)]\n",
     "\n",
+    "# Testing code (For debugging purpose)\n",
+    "\n",
+    "print('BU properties ------------------------------------')\n",
+    "print(df2015_BU.shape)\n",
+    "print(df2016_BU.shape)\n",
+    "print(df2017_BU.shape)\n",
+    "\n",
+    "# Drop rows of data whose Site EUI (kBTU/sf) is not available\n",
+    "\n",
+    "df2015_BU = df2015_BU.loc[df_2015['Site EUI (kBTU/sf)'] != 'Not Available']\n",
+    "df2016_BU = df2016_BU.loc[df_2016['Site EUI (kBTU/sf)'] != 'Not Available']\n",
+    "df2017_BU = df2017_BU.loc[df_2017['Site EUI (kBTU/sf)'] != 'Not Available']\n",
     "\n",
     "# Testing code (For debugging purpose)\n",
     "\n",
@@ -148,10 +167,18 @@
     "# # print(df2015_BU)\n",
     "# # print(df2016_BU)\n",
     "# # print(df2017_BU)\n",
+    "print('BU properties Site EUI (kBTU/sf)] != Not Available----')\n",
+    "print(df2015_BU.shape)\n",
+    "print(df2016_BU.shape)\n",
+    "print(df2017_BU.shape)\n",
+    "print('------------------------------------')\n",
+    "print(list(df_2015.columns.values))\n",
+    "print('------------------------------------')\n",
+    "# print(df2015_BU['Property Name'])\n",
+    "# print(df2016_BU['Property Name'])\n",
+    "# print(df2017_BU['Property Name'])\n",
     "# print('------------------------------------')\n",
-    "# print(df2015_BU.shape)\n",
-    "# print(df2016_BU.shape)\n",
-    "# print(df2017_BU.shape)"
+    "# print(df2017_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])"
    ]
   },
   {
@@ -167,58 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.2038  0.1062  0.0778  0.062   0.0589  0.0588  0.0473  0.0813  0.0705\n",
-      "  0.0732  0.0673  0.0929]\n",
-      "[ 0.0919  0.1179  0.0995  0.0642  0.071   0.0733  0.066   0.0673  0.0733\n",
-      "  0.0774  0.0959  0.1023]\n",
-      "[ 0.1146  0.1031  0.0872  0.0862  0.0699  0.065   0.0661  0.0635  0.0865\n",
-      "  0.0671  0.0727  0.1181]\n",
-      "[[ 0.6877  0.3123]\n",
-      " [ 0.6654  0.3346]\n",
-      " [ 0.6079  0.3921]\n",
-      " [ 0.5086  0.4914]\n",
-      " [ 0.3888  0.6112]\n",
-      " [ 0.3663  0.6337]\n",
-      " [ 0.1913  0.8087]\n",
-      " [ 0.5173  0.4827]\n",
-      " [ 0.509   0.491 ]\n",
-      " [ 0.5598  0.4402]\n",
-      " [ 0.5245  0.4755]\n",
-      " [ 0.6743  0.3257]]\n",
-      "[[ 0.6519  0.3481]\n",
-      " [ 0.6802  0.3198]\n",
-      " [ 0.6496  0.3504]\n",
-      " [ 0.5395  0.4605]\n",
-      " [ 0.435   0.565 ]\n",
-      " [ 0.4154  0.5846]\n",
-      " [ 0.3339  0.6661]\n",
-      " [ 0.3336  0.6664]\n",
-      " [ 0.4442  0.5558]\n",
-      " [ 0.5321  0.4679]\n",
-      " [ 0.6225  0.3775]\n",
-      " [ 0.6477  0.3523]]\n",
-      "[[ 0.6739  0.3261]\n",
-      " [ 0.6707  0.3293]\n",
-      " [ 0.6211  0.3789]\n",
-      " [ 0.592   0.408 ]\n",
-      " [ 0.5074  0.4926]\n",
-      " [ 0.3905  0.6095]\n",
-      " [ 0.3199  0.6801]\n",
-      " [ 0.3178  0.6822]\n",
-      " [ 0.3672  0.6328]\n",
-      " [ 0.396   0.604 ]\n",
-      " [ 0.5386  0.4614]\n",
-      " [ 0.6525  0.3475]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate monthly energy consumption electricity/natrual gas\n",
     "\n",
@@ -273,7 +251,6 @@
     "\n",
     "\n",
     "# Testing code (For debugging purpose)\n",
-    "\n",
     "# print(np.sum(share_2015))\n",
     "# print(np.sum(share_2016))\n",
     "# print(np.sum(share_2017))\n",
@@ -281,27 +258,147 @@
     "# print(np.sum(NESplits_2015))\n",
     "# print(np.sum(NESplits_2016))\n",
     "# print(np.sum(NESplits_2017))\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2015.shape)\n",
+    "# print(share_2016.shape)\n",
+    "# print(share_2017.shape)\n",
     "\n",
-    "# print(share_2015)\n",
-    "# print(share_2016)\n",
-    "# print(share_2017)\n",
-    "# print(NESplits_2015)\n",
-    "# print(NESplits_2016)\n",
-    "# print(NESplits_2017)"
+    "share_2015 = np.reshape(share_2015, (share_2015.shape[0], 1))\n",
+    "share_2016 = np.reshape(share_2016, (share_2016.shape[0], 1))\n",
+    "share_2017 = np.reshape(share_2017, (share_2017.shape[0], 1))\n",
+    "\n",
+    "\n",
+    "# Testing code (For debugging purpose)\n",
+    "\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2015.shape)\n",
+    "# print(share_2016.shape)\n",
+    "# print(share_2017.shape)\n",
+    "# print('------------------------------------')\n",
+    "# print(NESplits_2015.shape)\n",
+    "# print(NESplits_2016.shape)\n",
+    "# print(NESplits_2017.shape)\n",
+    "\n",
+    "share_2015_G_E = share_2015 * NESplits_2015\n",
+    "share_2016_G_E = share_2016 * NESplits_2016\n",
+    "share_2017_G_E = share_2017 * NESplits_2017\n",
+    "\n",
+    "\n",
+    "# Testing code (For debugging purpose)\n",
+    "\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2015_G_E.shape)\n",
+    "# print(share_2016_G_E.shape)\n",
+    "# print(share_2017_G_E.shape)\n",
+    "# print(share_2015_G_E)\n",
+    "# print(share_2016_G_E)\n",
+    "# print(share_2017_G_E)\n",
+    "# print('------------------------------------')\n",
+    "\n",
+    "# print(np.sum(share_2015_G_E, axis = 1))\n",
+    "# print(np.sum(share_2016_G_E, axis = 1))\n",
+    "# print(np.sum(share_2017_G_E, axis = 1))\n",
+    "\n",
+    "# Normalize the seperated distribution of electircity/natrual gas comsumption\n",
+    "G_dstri_2015 = share_2015_G_E[:, 0]\n",
+    "E_dstri_2015 = share_2015_G_E[:, 1]\n",
+    "\n",
+    "G_dstri_2016 = share_2016_G_E[:, 0]\n",
+    "E_dstri_2016 = share_2016_G_E[:, 1]\n",
+    "\n",
+    "G_dstri_2017 = share_2017_G_E[:, 0]\n",
+    "E_dstri_2017 = share_2017_G_E[:, 1]\n",
+    "\n",
+    "# Reshape from (12, ) to (12, 1)\n",
+    "G_dstri_2015 = np.reshape(G_dstri_2015, (G_dstri_2015.shape[0], 1))\n",
+    "E_dstri_2015 = np.reshape(E_dstri_2015, (E_dstri_2015.shape[0], 1))\n",
+    "\n",
+    "G_dstri_2016 = np.reshape(G_dstri_2016, (G_dstri_2016.shape[0], 1))\n",
+    "E_dstri_2016 = np.reshape(E_dstri_2016, (E_dstri_2016.shape[0], 1))\n",
+    "\n",
+    "G_dstri_2017 = np.reshape(G_dstri_2017, (G_dstri_2017.shape[0], 1))\n",
+    "E_dstri_2017 = np.reshape(E_dstri_2017, (E_dstri_2017.shape[0], 1))\n",
+    "\n",
+    "# Testing code (For debugging purpose)\n",
+    "\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2015_G_E)\n",
+    "# print(G_dstri_2015)\n",
+    "# print(E_dstri_2015)\n",
+    "\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2016_G_E)\n",
+    "# print(G_dstri_2016)\n",
+    "# print(E_dstri_2016)\n",
+    "\n",
+    "# print('------------------------------------')\n",
+    "# print(share_2017_G_E)\n",
+    "# print(G_dstri_2017)\n",
+    "# print(E_dstri_2017)\n",
+    "\n",
+    "G_dstri_2015_Norm = normalize(G_dstri_2015, norm='l1', axis = 0)\n",
+    "E_dstri_2015_Norm = normalize(E_dstri_2015, norm='l1', axis = 0)\n",
+    "\n",
+    "G_dstri_2016_Norm = normalize(G_dstri_2016, norm='l1', axis = 0)\n",
+    "E_dstri_2016_Norm = normalize(E_dstri_2016, norm='l1', axis = 0)\n",
+    "\n",
+    "G_dstri_2017_Norm = normalize(G_dstri_2017, norm='l1', axis = 0)\n",
+    "E_dstri_2017_Norm = normalize(E_dstri_2017, norm='l1', axis = 0)\n",
+    "\n",
+    "# print(G_dstri_2015_Norm)\n",
+    "# print(E_dstri_2015_Norm)\n",
+    "# print(G_dstri_2016_Norm)\n",
+    "# print(E_dstri_2016_Norm)\n",
+    "# print(G_dstri_2017_Norm)\n",
+    "# print(E_dstri_2017_Norm)\n",
+    "# print('------------------------------------')\n",
+    "\n",
+    "# print(np.sum(G_dstri_2015_Norm))\n",
+    "# print(np.sum(E_dstri_2015_Norm))\n",
+    "# print(np.sum(G_dstri_2016_Norm))\n",
+    "# print(np.sum(E_dstri_2016_Norm))\n",
+    "# print(np.sum(G_dstri_2017_Norm))\n",
+    "# print(np.sum(E_dstri_2017_Norm))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Generate the data frame \n",
-    "# print(df2015_BU.shape)\n",
-    "# print(df2016_BU.shape)\n",
-    "# print(df2017_BU.shape)\n",
-    "# print(list(df_2015.columns.values))\n",
-    "# print(df2015_BU.head(20))"
+    "# One more data trim... \n",
+    "'''\n",
+    "Since the distribution only involve with gas and electricity, we CURRENTLY drop the buildings that use steam. \n",
+    "However in the future, if we get the revised consumption distribution over electricity, gas and steam, we will\n",
+    "re-include those dropped buildings that use steam back to analysis. \n",
+    "'''\n",
+    "\n",
+    "df2015_BU = df2015_BU.loc[df2015_BU['% Steam'] == '0%']\n",
+    "df2016_BU = df2016_BU.loc[df2016_BU['% Steam'].isnull()]\n",
+    "df2017_BU = df2017_BU.loc[df2017_BU['% Steam'].isnull()]\n",
+    "\n",
+    "# Testing code (For debugging purpose)\n",
+    "# print(df2015_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "# print('----------------------------')\n",
+    "# print(df2016_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "# print('----------------------------')\n",
+    "# print(df2017_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "# print('----------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Assignment montly data based on the split\n",
+    "\n"
    ]
   },
   {
@@ -321,7 +418,17 @@
    },
    "outputs": [],
    "source": [
-    "# Data visualization\n"
+    "# Data visualization\n",
+    "\n",
+    "# Visualize:\n",
+    "# G_dstri_2015_Norm \n",
+    "# E_dstri_2015_Norm \n",
+    "\n",
+    "# G_dstri_2016_Norm \n",
+    "# E_dstri_2016_Norm \n",
+    "\n",
+    "# G_dstri_2017_Norm \n",
+    "# E_dstri_2017_Norm \n"
    ]
   }
  ],
