--- a/CS506_Initial_Analysis_Report.ipynb
+++ b/CS506_Initial_Analysis_Report.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +194,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------\n",
+      "[[ 0.25027659]\n",
+      " [ 0.12618983]\n",
+      " [ 0.08445566]\n",
+      " [ 0.05630994]\n",
+      " [ 0.0408939 ]\n",
+      " [ 0.03846195]\n",
+      " [ 0.01615821]\n",
+      " [ 0.07510175]\n",
+      " [ 0.06408021]\n",
+      " [ 0.07317471]\n",
+      " [ 0.06303439]\n",
+      " [ 0.11186286]]\n",
+      "------------------------------------\n",
+      "[[ 0.14464954]\n",
+      " [ 0.08075908]\n",
+      " [ 0.06932938]\n",
+      " [ 0.0692417 ]\n",
+      " [ 0.08181624]\n",
+      " [ 0.08468411]\n",
+      " [ 0.08693396]\n",
+      " [ 0.08918847]\n",
+      " [ 0.07867043]\n",
+      " [ 0.07323219]\n",
+      " [ 0.07272881]\n",
+      " [ 0.06876609]]\n",
+      "------------------------------------\n",
+      "[[ 0.10994593]\n",
+      " [ 0.14717468]\n",
+      " [ 0.11861832]\n",
+      " [ 0.0635637 ]\n",
+      " [ 0.05668006]\n",
+      " [ 0.05587958]\n",
+      " [ 0.04044297]\n",
+      " [ 0.04120252]\n",
+      " [ 0.05975376]\n",
+      " [ 0.07558174]\n",
+      " [ 0.10955713]\n",
+      " [ 0.12159962]]\n",
+      "------------------------------------\n",
+      "[[ 0.0702932 ]\n",
+      " [ 0.08284877]\n",
+      " [ 0.07660921]\n",
+      " [ 0.06496186]\n",
+      " [ 0.08814559]\n",
+      " [ 0.09415786]\n",
+      " [ 0.09660001]\n",
+      " [ 0.0985471 ]\n",
+      " [ 0.08951922]\n",
+      " [ 0.07957704]\n",
+      " [ 0.07954802]\n",
+      " [ 0.07919214]]\n",
+      "------------------------------------\n",
+      "[[ 0.14618533]\n",
+      " [ 0.13089127]\n",
+      " [ 0.10251838]\n",
+      " [ 0.09659456]\n",
+      " [ 0.06713536]\n",
+      " [ 0.0480461 ]\n",
+      " [ 0.04002574]\n",
+      " [ 0.03819894]\n",
+      " [ 0.06012326]\n",
+      " [ 0.05029692]\n",
+      " [ 0.07411813]\n",
+      " [ 0.14586602]]\n",
+      "------------------------------------\n",
+      "[[ 0.07922545]\n",
+      " [ 0.07197467]\n",
+      " [ 0.07004391]\n",
+      " [ 0.07455842]\n",
+      " [ 0.0729963 ]\n",
+      " [ 0.08398783]\n",
+      " [ 0.09530233]\n",
+      " [ 0.09183637]\n",
+      " [ 0.11604111]\n",
+      " [ 0.08591891]\n",
+      " [ 0.07111174]\n",
+      " [ 0.08700295]]\n",
+      "------------------------------------\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate monthly energy consumption electricity/natrual gas\n",
     "\n",
@@ -259,10 +351,11 @@
     "# print(np.sum(NESplits_2016))\n",
     "# print(np.sum(NESplits_2017))\n",
     "# print('------------------------------------')\n",
-    "# print(share_2015.shape)\n",
-    "# print(share_2016.shape)\n",
-    "# print(share_2017.shape)\n",
+    "# print(share_2015.shape) -> (12, )\n",
+    "# print(share_2016.shape) -> (12, )\n",
+    "# print(share_2017.shape) -> (12, )\n",
     "\n",
+    "# Change (12, ) to (12, 1) since the we can not do matrix multiplication with shape (12, ) \n",
     "share_2015 = np.reshape(share_2015, (share_2015.shape[0], 1))\n",
     "share_2016 = np.reshape(share_2016, (share_2016.shape[0], 1))\n",
     "share_2017 = np.reshape(share_2017, (share_2017.shape[0], 1))\n",
@@ -345,29 +438,183 @@
     "G_dstri_2017_Norm = normalize(G_dstri_2017, norm='l1', axis = 0)\n",
     "E_dstri_2017_Norm = normalize(E_dstri_2017, norm='l1', axis = 0)\n",
     "\n",
-    "# print(G_dstri_2015_Norm)\n",
-    "# print(E_dstri_2015_Norm)\n",
-    "# print(G_dstri_2016_Norm)\n",
-    "# print(E_dstri_2016_Norm)\n",
-    "# print(G_dstri_2017_Norm)\n",
-    "# print(E_dstri_2017_Norm)\n",
-    "# print('------------------------------------')\n",
+    "print('------------------------------------')\n",
+    "print(G_dstri_2015_Norm)\n",
+    "print('------------------------------------')\n",
+    "print(E_dstri_2015_Norm)\n",
+    "print('------------------------------------')\n",
+    "print(G_dstri_2016_Norm)\n",
+    "print('------------------------------------')\n",
+    "print(E_dstri_2016_Norm)\n",
+    "print('------------------------------------')\n",
+    "print(G_dstri_2017_Norm)\n",
+    "print('------------------------------------')\n",
+    "print(E_dstri_2017_Norm)\n",
+    "print('------------------------------------')\n",
     "\n",
-    "# print(np.sum(G_dstri_2015_Norm))\n",
-    "# print(np.sum(E_dstri_2015_Norm))\n",
-    "# print(np.sum(G_dstri_2016_Norm))\n",
-    "# print(np.sum(E_dstri_2016_Norm))\n",
-    "# print(np.sum(G_dstri_2017_Norm))\n",
-    "# print(np.sum(E_dstri_2017_Norm))\n"
+    "print(np.sum(G_dstri_2015_Norm))\n",
+    "print(np.sum(E_dstri_2015_Norm))\n",
+    "print(np.sum(G_dstri_2016_Norm))\n",
+    "print(np.sum(E_dstri_2016_Norm))\n",
+    "print(np.sum(G_dstri_2017_Norm))\n",
+    "print(np.sum(E_dstri_2017_Norm))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Site EUI (kBTU/sf) % Electricity % Gas % Steam\n",
+      "52                131.7           77%   23%      0%\n",
+      "54                 68.6           38%   62%      0%\n",
+      "55                 92.5           30%   70%      0%\n",
+      "56                100.6           42%   58%      0%\n",
+      "58                 44.4           67%    0%      0%\n",
+      "63                141.3           28%   72%      0%\n",
+      "65                 99.7           22%   78%      0%\n",
+      "141               174.3           49%   51%      0%\n",
+      "192               126.4           46%   54%      0%\n",
+      "199                 161           32%   68%      0%\n",
+      "200               154.3           50%   50%      0%\n",
+      "365               155.9           48%   52%      0%\n",
+      "366               323.1           53%   47%      0%\n",
+      "367               236.1           48%   52%      0%\n",
+      "370               360.4           38%   61%      0%\n",
+      "371               279.6           45%   55%      0%\n",
+      "735               192.5            6%   94%      0%\n",
+      "739                74.7           13%   87%      0%\n",
+      "741                96.1           49%   51%      0%\n",
+      "1012               15.1           58%   42%      0%\n",
+      "1013               41.8           41%   59%      0%\n",
+      "1014              115.2           99%    0%      0%\n",
+      "1099              163.6           48%   52%      0%\n",
+      "1105               94.8           63%   37%      0%\n",
+      "1107              157.3           48%   52%      0%\n",
+      "1218               93.9           42%   58%      0%\n",
+      "1219                0.3          100%    0%      0%\n",
+      "1233                0.9          100%    0%      0%\n",
+      "1299              150.9           49%   51%      0%\n",
+      "1301               89.3           28%   72%      0%\n",
+      "1305              126.7           33%   67%      0%\n",
+      "1306                127           12%   88%      0%\n",
+      "1307               88.8           13%   87%      0%\n",
+      "1308               88.5           14%   86%      0%\n",
+      "1311              217.3           31%   69%      0%\n",
+      "1312               89.6           13%   87%      0%\n",
+      "1379               27.3           45%   55%      0%\n",
+      "----------------------------\n",
+      "    Site EUI (kBTU/sf)  % Electricity  % Gas  % Steam\n",
+      "25                51.9           0.36   0.63      NaN\n",
+      "34                97.7           0.39   0.61      NaN\n",
+      "35               177.5           0.48   0.52      NaN\n",
+      "36                27.5           1.00    NaN      NaN\n",
+      "52               226.9           0.05   0.95      NaN\n",
+      "64                 6.5            NaN   1.00      NaN\n",
+      "65                 327           0.30   0.70      NaN\n",
+      "75               155.2           0.28   0.72      NaN\n",
+      "92                 105           0.22   0.78      NaN\n",
+      "142              154.7           0.50   0.50      NaN\n",
+      "155              365.5           0.51   0.49      NaN\n",
+      "159               29.7           0.42   0.58      NaN\n",
+      "163               66.6           0.15   0.85      NaN\n",
+      "172              208.1           0.36   0.64      NaN\n",
+      "204              283.3           0.46   0.54      NaN\n",
+      "214               71.8           0.39   0.61      NaN\n",
+      "216              252.7           0.47   0.53      NaN\n",
+      "227               81.5           0.53   0.47      NaN\n",
+      "253              132.5           0.11   0.89      NaN\n",
+      "285               93.5           0.13   0.87      NaN\n",
+      "286               90.6           0.14   0.86      NaN\n",
+      "299               52.3           1.00    NaN      NaN\n",
+      "300              103.9           0.39   0.61      NaN\n",
+      "305              120.2           0.52   0.48      NaN\n",
+      "306                130           0.35   0.65      NaN\n",
+      "307               59.6           0.72   0.28      NaN\n",
+      "308              351.9           0.39   0.61      NaN\n",
+      "313              100.4           0.31   0.69      NaN\n",
+      "317               88.3           0.15   0.84      NaN\n",
+      "319              119.7           0.34   0.66      NaN\n",
+      "320                 97           0.49   0.51      NaN\n",
+      "324                 51           0.70    NaN      NaN\n",
+      "327               74.6           0.97    NaN      NaN\n",
+      "330                0.3           1.00    NaN      NaN\n",
+      "333              280.5           0.46   0.54      NaN\n",
+      "341               83.3           0.23   0.77      NaN\n",
+      "344                  1           1.00    NaN      NaN\n",
+      "350               95.9           0.11   0.89      NaN\n",
+      "369              145.1           0.29   0.71      NaN\n",
+      "386               90.8           0.33   0.67      NaN\n",
+      "389              155.7           0.15   0.85      NaN\n",
+      "391              186.8           0.36   0.64      NaN\n",
+      "396               91.2           0.28   0.72      NaN\n",
+      "398              129.2           0.46   0.54      NaN\n",
+      "400               98.2           0.58   0.42      NaN\n",
+      "404              423.2           0.19   0.81      NaN\n",
+      "909                 76           0.52   0.48      NaN\n",
+      "----------------------------\n",
+      "     Site EUI (kBTU/sf) % Electricity    % Gas % Steam\n",
+      "565               158.4         0.50%   99.50%     NaN\n",
+      "610                58.4        73.10%   26.90%     NaN\n",
+      "637                 0.9       100.00%      NaN     NaN\n",
+      "645               174.2       100.00%      NaN     NaN\n",
+      "649               116.4        66.60%   33.40%     NaN\n",
+      "1636               54.8        30.50%   69.30%     NaN\n",
+      "1637              100.5        45.40%   54.60%     NaN\n",
+      "1638              153.7        49.10%   51.00%     NaN\n",
+      "1640              130.7         8.40%   91.60%     NaN\n",
+      "1652                4.3           NaN  100.00%     NaN\n",
+      "1654              315.1        29.10%   70.90%     NaN\n",
+      "1662              119.2        32.60%   67.40%     NaN\n",
+      "1675               83.4        25.10%   74.90%     NaN\n",
+      "1687              134.7        55.30%   44.70%     NaN\n",
+      "1689              386.6        52.20%   47.80%     NaN\n",
+      "1692               27.4        51.90%   48.10%     NaN\n",
+      "1694                 60        14.30%   85.70%     NaN\n",
+      "1696               76.2        61.10%   38.90%     NaN\n",
+      "1698                220        30.40%   69.60%     NaN\n",
+      "1707              294.2        39.50%   60.50%     NaN\n",
+      "1709               62.8        38.40%   61.60%     NaN\n",
+      "1710              213.1        49.70%   50.30%     NaN\n",
+      "1712               82.9        48.90%   51.10%     NaN\n",
+      "1725                109        10.10%   89.90%     NaN\n",
+      "1735              145.6        53.60%   46.40%     NaN\n",
+      "1737                 80        13.30%   86.70%     NaN\n",
+      "1738               80.1        14.30%   85.70%     NaN\n",
+      "1742               99.2        39.90%   60.10%     NaN\n",
+      "1744               91.3        60.90%   39.10%     NaN\n",
+      "1745               90.8        47.00%   52.70%     NaN\n",
+      "1746              321.5        41.20%   58.80%     NaN\n",
+      "1748               95.4        32.30%   67.70%     NaN\n",
+      "1749               75.8        18.30%   81.70%     NaN\n",
+      "1750               11.2       100.00%      NaN     NaN\n",
+      "1751              106.9        38.60%   61.40%     NaN\n",
+      "1753               91.8        56.70%   43.00%     NaN\n",
+      "1754               61.3        53.20%   46.80%     NaN\n",
+      "1756               35.4        98.90%      NaN     NaN\n",
+      "1757              113.5        96.20%      NaN     NaN\n",
+      "1758                0.3       100.00%      NaN     NaN\n",
+      "1760              219.1        49.50%   50.50%     NaN\n",
+      "1762               86.3        20.80%   79.20%     NaN\n",
+      "1765               84.9        12.00%   88.00%     NaN\n",
+      "1770              132.5        29.60%   70.40%     NaN\n",
+      "1773              101.7        30.70%   69.30%     NaN\n",
+      "1775              174.9        13.00%   87.00%     NaN\n",
+      "1776                197        30.30%   69.70%     NaN\n",
+      "1777               79.8        29.90%   70.00%     NaN\n",
+      "1778              128.5        43.90%   56.10%     NaN\n",
+      "1779              101.6        52.60%   47.40%     NaN\n",
+      "1782                472        16.00%   84.00%     NaN\n",
+      "----------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# One more data trim... \n",
     "'''\n",
@@ -376,28 +623,33 @@
     "re-include those dropped buildings that use steam back to analysis. \n",
     "'''\n",
     "\n",
+    "# Be careful that in 2015, 2017 data is in format of xx% while in 2016 it is 0.xx. \n",
+    "# Those are all strings in dataframe, need to convert to numerical before calculation (monthly consumption assignment)\n",
+    "\n",
     "df2015_BU = df2015_BU.loc[df2015_BU['% Steam'] == '0%']\n",
     "df2016_BU = df2016_BU.loc[df2016_BU['% Steam'].isnull()]\n",
     "df2017_BU = df2017_BU.loc[df2017_BU['% Steam'].isnull()]\n",
     "\n",
+    "\n",
+    "\n",
     "# Testing code (For debugging purpose)\n",
-    "# print(df2015_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
-    "# print('----------------------------')\n",
-    "# print(df2016_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
-    "# print('----------------------------')\n",
-    "# print(df2017_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
-    "# print('----------------------------')"
+    "print(df2015_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "print('----------------------------')\n",
+    "print(df2016_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "print('----------------------------')\n",
+    "print(df2017_BU[['Site EUI (kBTU/sf)', '% Electricity', '% Gas', '% Steam']])\n",
+    "print('----------------------------')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Assignment montly data based on the split\n",
+    "# Assignment of montly data \n",
     "\n"
    ]
   },
@@ -412,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
